Refactor project structure and enhance configuration
- Updated .gitignore to exclude environment files, IDE settings, and build artifacts.
- Modified Dockerfile for a multi-stage build, improving image size and security by using a non-root user.
- Added Spring Boot Actuator dependencies in pom.xml for better application monitoring.
- Enhanced CORS configuration in SecurityConfig to allow dynamic origins from properties.
- Updated application properties for dev, prod, and test environments to include new configurations and logging settings.
- Improved unit tests for ConductorService and DriverService with better naming conventions and additional test cases.
- Created .dockerignore and .env.example files for better environment management.
- Added development setup and Docker scripts for easier local development and container management.